Avoid line break on poll creation page
Fix after having made radio button fonts bigger generally.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,11 @@ h2 {
     vertical-align: super;
 }
 
+.scaletext {
+    font-size: 16mm;
+    vertical-align: super;
+}
+
 .radiofield {
     vertical-align: text-top;
 }
